--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ readme = "README.md"
 repository = "https://github.com/mushitoriami/hilang"
 
 [dependencies]
-kohaku = "0.1.4"
+kohaku = "=0.1.5"
 suzuran = "0.1.1"
